# mcp-eval

./: .gitignore
harness/: CLAUDE.md  PRD.md  package-lock.json  package.json  tsconfig.json
target-repo/: CLAUDE.md  PRD.md  README.md  pyproject.toml
target-repo/pyservicelab/: __init__.py  cli.py
target-repo/pyservicelab/api/: __init__.py  handlers.py  routing.py  schemas.py
target-repo/pyservicelab/auth/: __init__.py  hashing.py  models.py  policies.py  service.py  tokens.py
target-repo/pyservicelab/config/: __init__.py  feature_flags.py  loaders.py  settings.py
target-repo/pyservicelab/core/: __init__.py  errors.py  logging.py  text.py  time.py  tracing.py  utils.py  validation.py
target-repo/pyservicelab/db/: __init__.py  audit_repo.py  migrations.py  project_repo.py  repo_base.py  sqlite.py  task_repo.py  user_repo.py
target-repo/pyservicelab/domain/: __init__.py  audit.py  project.py  task.py  user.py
target-repo/pyservicelab/security/: __init__.py  checks.py  safe_paths.py  sanitization.py  secrets.py
target-repo/pyservicelab/services/: __init__.py  audit_service.py  project_service.py  task_service.py  user_service.py
target-repo/scripts/: apply_task.py  reset_repo.py
target-repo/tasks/: task_01_token_expiry_bypass.patch  task_02_project_tags_inverted.patch  task_03_empty_name_accepted.patch  task_04_audit_count_broken.patch  task_05_email_exists_always_false.patch
target-repo/tests/: conftest.py  test_audit.py  test_auth.py  test_cli.py  test_config.py  test_logging.py  test_projects.py  test_security.py  test_tasks.py  test_users.py
(+39 files in other folders)
